# django-lk-protecc

./: .gitignore  README.md  dev_make_migrations.py  dev_settings.py  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
django_lk_protecc/: __init__.py  dev_make_migrations.py  dev_settings.py  middleware.py
django_lk_protecc/protecc/: __init__.py  apps.py  middleware.py  models.py  signals.py  tests.py  utils.py
django_lk_protecc/protecc/migrations/: 0001_initial.py  0002_auto_20210715_0918.py  0003_alter_fraudtracker_user.py  0004_fraudtracker_message.py
django_lk_protecc/tests/: test_fraud_tracker.py
tests/: test_fraud_tracker.py
